# finally

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.claude-plugin/: marketplace.json
backend/: app.py  db.py  pyproject.toml
backend/chat/: __init__.py  actions.py  context.py  llm.py  mock.py  parser.py  service.py
backend/demos/: market_data_demo.py
backend/market/: base.py  cache.py  factory.py  fallback.py  massive.py  poller.py  seeds.py  sim_engine.py  simulator.py  stream.py  tracked.py  types.py
backend/routes/: chat.py  health.py  portfolio.py  stream.py  watchlist.py
backend/services/: portfolio.py
backend/tests/: conftest.py  test_app.py  test_chat_routes.py  test_db_helpers.py  test_health.py  test_portfolio_routes.py  test_watchlist_routes.py
backend/tests/market/: test_cache.py  test_factory.py  test_fallback.py  test_massive.py  test_poller.py  test_seeds.py  test_sim_engine.py  test_simulator.py  test_stream.py  test_tracked.py  test_types.py
frontend/: build-scaffold.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  scaffold.js  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
independent-reviewer/: plugin.json
planning/: MARKET_DATA_REVIEW.md  MARKET_DATA_SUMMARY.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: README.md  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  test-results.json
(+39 files in other folders)
